# advent-of-code

2020/: .gitignore  Makefile  build.sbt
2020/.bsp/: sbt.json
2020/day1/: Day1.scala
2020/src/main/resources/: day2-input.txt  day3-input.txt
2020/src/main/scala/: AOCDay.scala  Day1.scala  Day10.scala  Day11.scala  Day12.scala  Day13.scala  Day14.scala  Day15.scala  Day16.scala  Day17.scala  Day18.scala  Day19.scala  Day2.scala  Day20.scala  Day21.scala  Day22.scala  Day23.scala  Day24.scala  Day25.scala  Day3.scala  Day4.scala  Day5.scala  Day6.scala  Day7.scala  Day8.scala  Day9.scala  Main.scala  Utils.scala  newDay.py
2021/: README.md  package.json  run
2021/src/: day1.js  day1.rs  day10.js  day10.rs  day11.js  day11.rs  day12.js  day12.rs  day13.js  day13.rs  day14.js  day14.rs  day15.js  day15.rs  day16.js  day16.rs  day17.js  day17.rs  day18.js  day18.rs  day19.js  day19.rs  day2.js  day2.rs  day20.js  day20.rs  day21.js  day21.rs  day22.js  day22.rs  day23.js  day23.rs  day24.js  day24.rs  day25.js  day25.rs  day3.js  day3.rs  day4.js  day4.rs  (+12 more)
2022/: .gitignore  README.md  aoc_2022.opam  download_day_input.bash  dune-project
2022/input_parser/: dune  input_file.ml  input_file.mli
2022/solutions/: all_solutions.ml  all_solutions.mli  day1.ml  day14.ml  day2.ml  day24.ml  day3.ml  day4.ml  day5.ml  day6.ml  day7.ml  day8.ml  day_solution.ml  dune  test_helpers.ml  test_helpers.mli
